# MPE_Cognition

./: .env.example  .gitignore  README.md  README_en.md  README_ja.md  README_vi.md  README_zh.md  adv_API.py  benchmark_runner.py  crypto.py  push.py  pyproject.toml  quick_start_models.py  reference.py  requirements.txt  setup_api_keys.py  simple.py  speaker_listener.py  spread_API.py  tag_API.py  test_unified_api.py  utils_api.py  verify_environment.py  world_comm.py
.github/: copilot-instructions.md
.github/agents/: 1.agent.md
docs/: README.md  index_en.html  index_zh.html
docs/architecture/: logging_system.md  models.md  observation_space.md
docs/configuration/: api_keys.md
docs/dev_notes/: api_keys_refactor.md  work_summary.md  workflow_standardization.md
docs/experiments/: benchmark_review.md  reproducibility.md  running_benchmarks.md
obs/: README.md  parse_adv_obs.py  parse_crypto_obs.py  parse_push_obs.py  parse_reference_obs.py  parse_simple_obs.py  parse_speaker_listener_obs.py  parse_spread_obs.py  parse_tag_obs.py  parse_world_comm_obs.py  test_parse_world_comm_obs_real.py  utils.py
paper/: clean_tex.py  paper.fdb_latexmk  paper.fls  paper.tex  paper.tex_cleaned.fdb_latexmk  paper.tex_cleaned.fls  paper.tex_cleaned.tex  paper.tex_cleaned.xdv
prompt/: My_requirement.md  prompt_for_adv.py  prompt_for_crypto.py  prompt_for_push.py  prompt_for_reference.py  prompt_for_simple.py  prompt_for_speaker_listener.py  prompt_for_spread.py  prompt_for_tag.py  prompt_for_world_comm.py
theory/: math_spirit.fdb_latexmk  math_spirit.fls  math_spirit.tex
(+4 files in other folders)
